final ios layout issues resolved

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,19 +4,11 @@
   background-color: white;
   height: 100%;
   display: grid;
-  grid-template-rows: 4.5em auto 7em;
+  grid-template-rows: 4.5em auto 5em;
 
   @media screen and (min-width: $default-app-width) {
     margin: auto;
     max-width: $default-app-width;
-  }
-
-  // safari overrides to show app within safe area
-  @supports (padding: max(0px)) {
-    background-image: linear-gradient(0deg, rgb(255, 255, 255) 95%, rgb(103, 58, 183) 5%);
-    box-sizing: border-box;
-    padding-top: max(0.5em, env(safe-area-inset-top));
-    padding-bottom: max(0.5em, env(safe-area-inset-bottom));
   }
 
   header {
@@ -51,17 +43,28 @@
   }
 
   footer {
-    margin: 1em;
+    margin: 0.5em;
     border-radius: 1em;
     max-width: 600px;
     background-color: lightgray;
     .footer-content {
       text-align: center;
-      padding: 1em;
+      padding: 0.5em;
     }
   }
 }
 
 .mat-toolbar {
   height: 60px;
+}
+
+// safari overrides to show app within safe area
+@supports (padding: max(0px)) {
+  #app-container {
+    box-sizing: border-box;
+    padding-top: max(0.5em, env(safe-area-inset-top));
+    padding-bottom: max(0.5em, env(safe-area-inset-bottom));
+
+    background-image: linear-gradient(0deg, rgb(255, 255, 255) 90%, rgb(103, 58, 183) 10%);
+  }
 }
